Reviewed by Xan Lopez.

[GTK] Failing test media/video-document-types.html
https://bugs.webkit.org/show_bug.cgi?id=31352

Match what Mac has been doing since r36001: cancel the main load,
and handle failures caused by 'will be handled by plugin' errors.

Covered by test media/video-document-types.html

* WebCoreSupport/FrameLoaderClientGtk.cpp:
(WebKit::FrameLoaderClient::committedLoad):
(WebKit::FrameLoaderClient::shouldFallBack):

Canonical link: https://commits.webkit.org/42533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51104 268f45cc-cd09-0410-ab3c-d52691b4dbfc